reset to fork